<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/foto_perfil"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop= "20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/txtNome"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/txtDescricao"
            android:textSize="14sp" />

    </ScrollView>

    <Button
        android:id="@+id/btnProjetos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/projetos"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btnContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/contato"
        android:backgroundTint="@color/blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>